--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - docker build -t sumithnc143/react-test -f ./client/Dockerfile.dev /client
 
 script:
-  - docker run -e CI=true sumithnc143/react-test npm test -- --coverage
+  - docker run -e CI=true stephengrider/react-test npm test -- --coverage
 
 deploy:
   provider: script
