changed yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,10 @@ before_install:
   - gcloud config set compute/zone us-central1-c
   - gcloud container clusters get-credentials multi-cluster
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin 
-  - docker build -t sumithnc143/react-test -f ./client/Dockerfile.dev /client
+  - docker build -t sumithnc143/react-test -f ./client/Dockerfile.dev  ./client
 
 script:
-  - docker run -e CI=true stephengrider/react-test npm test -- --coverage
+  - docker run -e CI=true sumithnc143/react-test npm test -- --coverage
 
 deploy:
   provider: script
