--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: ingress-service
@@ -12,18 +12,12 @@ spec:
     - http:
         paths:
           - path: /?(.*)
-            pathType: Prefix
             # UPDATE THIS LINE ABOVE
             backend:
-              service:
-                name: client-cluster-ip-service
-                port:
-                  number: 3000
+              serviceName: client-cluster-ip-service
+              servicePort: 3000
           - path: /api/?(.*)
-            pathType: Prefix
             # UPDATE THIS LINE ABOVE
             backend:
-              service:
-                name: server-cluster-ip-service
-                port:
-                  number: 5000
+              serviceName: server-cluster-ip-service
+              servicePort: 5000
